<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_front"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_add_fees"
            android:title="@string/menu_addFees" />
        <item
            android:id="@+id/nav_sheet_history"
            android:title="@string/menu_sheetHistory" />
        <item
            android:id="@+id/nav_sheet_to_proceed"
            android:title="@string/menu_sheetToProceed" />
        <item
            android:id="@+id/nav_my_profil"
            android:title="@string/menu_myProfil" />
    </group>
</menu>
