<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_back"
    tools:context=".ui.menu.MenuBackActivity"
    app:startDestination="@+id/nav_home_back">

    <fragment
        android:id="@+id/nav_home_back"
        android:name="com.example.safifees_v0.ui.homeBack.HomeBackFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_back" />
    <fragment
        android:id="@+id/nav_ac_management"
        android:name="com.example.safifees_v0.ui.acManagement.AcManagementFragment"
        android:label="@string/menu_acManagement"
        tools:layout="@layout/fragment_ac_management" />
    <fragment
        android:id="@+id/nav_account_management"
        android:name="com.example.safifees_v0.ui.accountManagement.AccountManagementFragment"
        android:label="@string/menu_accountManagement"
        tools:layout="@layout/fragment_account_management" />
    <fragment
        android:id="@+id/nav_my_profil"
        android:name="com.example.safifees_v0.ui.myProfil.MyProfilFragment"
        android:label="@string/menu_myProfil"
        tools:layout="@layout/fragment_my_profil" />
</navigation>